# sber-agents

./: README.md
02-llm-api/: bank_assistant_prompt.txt  report.md
02-llm-api/src/: bot.py
03-aidd/: .gitignore  pyproject.toml  run.py
03-aidd/docs/: idea.md  tasklist.md
03-aidd/src/: bot.py  config.py  handlers.py  llm_client.py
docs/: idea.md
